--- a/indexx.html
+++ b/indexx.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>James Website</title>
-    <link rel="stylesheet" href="./style.css"
+    <link rel="stylesheet" href="./style.css"/>
 </head>
 <body>
    <header>
@@ -47,7 +47,7 @@
     <section id="skills">
         <h1>Skills</h1>
         <p>
-            <ul id="ul-skills-list">
+            <ul id="ul-list">
                 <li>Programming </li>
                     <ul id="nested-skills-list">
                         <li>Python</li>
@@ -65,7 +65,12 @@
 
     <section id="passions">
         <h1>Passions</h1>
-        <p>Travelling</p>
+        <ul id="ul-list">
+            <li>Travelling</li>
+            <li>Reading Tech Blog and novels</li>
+            <li>Crypto wallets</li>
+            <li>Football</li>
+        </ul>
     </section>
 
     <section id="contact">
